<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="right">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.udacity.apurv.android_nanodegree_project2.fragments.MovieDetailActivityFragment"
        android:orientation="vertical">

        <TextView
            android:id="@+id/original_title"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/topbarColorDetail"
            android:gravity="center"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            tools:textAlignment="center" />


        <LinearLayout
            android:id="@+id/second_part"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/poster_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:cropToPadding="true"
                android:padding="1dp"
                android:paddingLeft="15dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/poster_image"
                android:layout_weight="1"
                android:gravity="top"
                android:orientation="vertical"
                android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/release_date_tab"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:background="@color/topbarColorDetail"
                        android:text="@string/release_date_tab"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@android:color/background_dark"
                        android:layout_weight="0.15"/>

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/release_date_tab"
                        android:text="15th Aug, 2016"
                        android:paddingTop="10dp"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@android:color/background_dark"
                        android:layout_weight="0.15"/>

                    <TextView
                        android:id="@+id/rating_tab"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="15dp"
                        android:background="@color/topbarColorDetail"
                        android:text="@string/rating_tab"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@android:color/background_dark"
                        android:layout_weight="0.15"/>

                    <TextView
                        android:id="@+id/user_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rating_tab"
                        android:paddingTop="10dp"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@android:color/background_dark"
                        android:layout_weight="0.15"/>

                    <ImageView
                        android:src="@android:drawable/btn_star_big_off"
                        android:text="Add to favorites"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/favImage"
                        android:clickable="true"
                        android:layout_weight="0.25"
                        android:contentDescription="@string/content_fav_desc"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="top"
                    android:orientation="vertical" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/overview_tab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/topbarColorDetail"
                android:gravity="center"
                android:paddingRight="10dp"
                android:text="@string/overview_tab"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:paddingTop="10dp"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:maxLines = "8"
                android:scrollbars="vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/black"
                android:background="@color/topbarColorDetail"
                android:gravity="center"
                android:text="@string/trailers_tab"
                android:textSize="18sp"
                android:textStyle="normal|bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailers_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/black"
                android:background="@color/topbarColorDetail"
                android:gravity="center"
                android:text="@string/reviews_tab"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:color/transparent"
                android:dividerHeight="8dp"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />



        </LinearLayout>

    </LinearLayout>


</ScrollView>
